Add Lenovo machine + automation + theme improvements
- Add Lenovo 21CB001PMX configuration and host files
- Add automated maintenance: weekly updates (Sun 3AM), monthly GC (30d), backup cleanup (7d)
- Add window switcher script with Alt-Tab rofi integration
- Force dark mode across Firefox, GTK, Qt applications
- Update SDDM theme to catppuccin-mocha with custom background
- Dim keyboard backlight in hypridle after 2.5min
- Fix git config syntax (userName/userEmail → settings)
- Adjust notification sizes (smaller, more compact)
- Add monitor auto-detection with xwayland scaling
- Enable nix-ld for dynamic binaries
- Update flake.lock (add nix-darwin input)
- Document automation in README

--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -12,5 +12,6 @@
   "terminal.integrated.fontSize": 12,
   "files.autoSave": "onFocusChange",
   "files.trimTrailingWhitespace": true,
-  "files.insertFinalNewline": true
+  "files.insertFinalNewline": true,
+  "claudeCode.preferredLocation": "panel"
 }
